tests/baselines/reference/privateNameImplicitDeclaration.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameImplicitDeclaration.js(4,14): error TS2339: Property '#x' does not exist on type 'C'.


==== tests/cases/conformance/classes/members/privateNames/privateNameImplicitDeclaration.js (1 errors) ====
    class C {
        constructor() {
            /** @type {string} */
            this.#x;
                 ~~
!!! error TS2339: Property '#x' does not exist on type 'C'.
        }
    }
    
    